change setup.tex-include to .sty package

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,5 @@
 \documentclass{beamer}
-
-\include{setup}
+\usepackage{setup}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Title page %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title[your short title]{your title}
